@@ -4,6 +4,7 @@
 
 Version 1.4.20 - SVN
 --------------------
+  - Protect message deletion with security token system. (Secunia Advisory SA34627)
 
 Version 1.4.20RC1 - 12 Aug 2009
 -------------------------------
